--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-<p> baba <!p>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title> neyy </title>
+  </head>
+  <body>
+    <h1> baba <!h1>
+  </body>
+</html>
