tutti furti ekleme

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <title> neyy </title>
   </head>
   <body>
-    <h1> baba <!h1>
+    <h1> FURTHY <!h1>
+    <h1> SİTE <!h1>
+    <h2> neden böyle bişi yaptım bilmiyom ama <!h2>
+    <p> tutti furti bon premium extra <!p>
   </body>
 </html>
