--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <h1> FURTHY </h1>
     <h1> SİTE </h1>
     <h2> neden böyle bişi yaptım bilmiyom ama </h2>
-    <p> tutti furti bon premium extra </p>
+    <p> hmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmm </p>
+    <h1> nebiyayı skm sudis :thumbs_up: </h1>
   </body>
 </html>
