--- a/index.html
+++ b/index.html
@@ -33,6 +33,17 @@
 							<p>bu adam aynı ben</p>
 						</article>
 
+            <article class="thumb">
+							<a href="images/fulls/03.jpg" class="image"><img src="images/thumbs/03.jpg" alt="" /></a>
+							<h2>    Might    </h2>
+						</article>
+
+            <article class="thumb">
+							<a href="images/fulls/04.jpg" class="image"><img src="images/thumbs/04.jpg" alt="" /></a>
+							<h2>    Credence    </h2>
+						</article>
+
+
 					</div>
 			</div>
 
